--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails db:create db:migrate && bundle exec rails server -b 0.0.0.0"
     volumes:
-      - .:/app
+      - .:/rails
     ports:
       - "${RAILS_PORT}:3000"
     depends_on:
